# CoolerSockets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: Server.cpp
include/: CoolerSockets.hpp
source/: CoolerSockets.cpp
